<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_editor_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/editor_padding">

        <TextView
            style="@style/MainStyle"
            android:text="@string/product_details" />

        <LinearLayout
            android:layout_width="@dimen/product_details_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/product_details_padding"
            android:paddingStart="@dimen/product_details_padding">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/Fields"
                android:layout_marginBottom="@dimen/product_name_margin"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/Fields"
                android:hint="@string/price_decimal"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/quantity_linear_padding">

        <TextView
            style="@style/MainStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="@dimen/quantity_details_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subtract_quantity"
                android:layout_width="@dimen/quantity_button_layout"
                android:layout_height="@dimen/quantity_button_layout"
                android:background="@drawable/quantity_button"
                android:text="@string/button_minus_sign"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="@dimen/quantity_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/Fields"
                android:layout_width="wrap_content"
                android:hint="@string/quantity_0_999"
                android:inputType="number" />

            <Button
                android:id="@+id/add_quantity"
                android:layout_width="@dimen/quantity_button_layout"
                android:layout_height="@dimen/quantity_button_layout"
                android:background="@drawable/quantity_button"
                android:text="@string/button_plus_sign"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="@dimen/quantity_button_plus_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/MainStyle"
            android:text="@string/supplier_details" />

        <LinearLayout
            android:layout_width="@dimen/supplier_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/supplier_padding"
            android:paddingStart="@dimen/supplier_padding">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/Fields"
                android:layout_marginBottom="@dimen/supplier_field_margin"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/Fields"
                android:hint="@string/supplier_phone_number"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
